--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,11 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "altdoc"]
+	path = altdoc
+	url = https://github.com/etiennebacher/altdoc
+	shallow = true
+	registered = true
 [submodule "circletyper"]
 	path = circletyper
 	url = https://github.com/etiennebacher/circletyper
