--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,10 @@
 [submodule ".registry"]
 	path = .registry
-	url = https://github.com/r-universe-org/cran-to-git
+	url = https://github.com/etiennebacher/etiennebacher.r-universe.dev
 	branch = HEAD
 [submodule "altdoc"]
 	path = altdoc
 	url = https://github.com/etiennebacher/altdoc
-[submodule "circletyper"]
-	path = circletyper
-	url = https://github.com/etiennebacher/circletyper
 [submodule "conductor"]
 	path = conductor
 	url = https://github.com/etiennebacher/conductor
@@ -17,6 +14,6 @@
 [submodule "shinyfullscreen"]
 	path = shinyfullscreen
 	url = https://github.com/etiennebacher/shinyfullscreen
-[submodule "spoiler"]
-	path = spoiler
-	url = https://github.com/etiennebacher/spoiler
+[submodule "tidypolars"]
+	path = tidypolars
+	url = https://github.com/etiennebacher/tidypolars
