--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,9 @@
 [submodule "conductor"]
 	path = conductor
 	url = https://github.com/etiennebacher/conductor
+[submodule "polars"]
+	path = polars
+	url = https://github.com/pola-rs/r-polars
 [submodule "prompter"]
 	path = prompter
 	url = https://github.com/etiennebacher/prompter
