--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 [submodule "polars"]
 	path = polars
 	url = https://github.com/pola-rs/r-polars
-	branch = *release
+	branch = v0.12.1
 [submodule "prompter"]
 	path = prompter
 	url = https://github.com/etiennebacher/prompter
