--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "loc"]
 	path = loc
 	url = https://github.com/etiennebacher/loc
-	branch = *release
+	branch = v0.0.1
 [submodule "polars"]
 	path = polars
 	url = https://github.com/pola-rs/r-polars
