--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,10 @@
 	path = conductor
 	url = https://github.com/etiennebacher/conductor
 	branch = v0.1.1
+[submodule "flint"]
+	path = flint
+	url = https://github.com/etiennebacher/flint
+	branch = *release
 [submodule "loc"]
 	path = loc
 	url = https://github.com/etiennebacher/loc
